# Automated-Criminal-Identification-System-Using-Face-Detection-And-Recognition

./: CMakeLists.txt  README.md
src/: database.cpp
src/src/: train_recognizer.cpp
src/src/src/: recognize.cpp
src/src/src/src/: detect_only.cpp
src/src/src/src/data/: labels.csv example
src/src/src/src/data/scripts/: run_train.sh
src/src/src/src/data/scripts/scripts/: run_recognize.sh
